# babel

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  babelbuild.bat  babelbuild.sh  conanfile.py  conanfile.txt  shell.cpp
.github/workflows/: cmake-multi-platform.yml  codeql.yml  conan-multi-platform.yml  documentation.yml  msvc.yml  ubuntu-clang.yaml
.well-known/openpgpkey/F56C9BB600C986171946FBCA09253B8B0DA7EE6A/: desc
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/manual/: arrays.html  constants.html  control-flow.html  getting-started.html  numbers.html  pointers.html  types.html  variables.html
docs/: Manifest.toml  make.jl
docs/src/: index.md  script.jl
docs/src/manual/: arrays.md  constants.md  control-flow.md  getting-started.md  numbers.md  pointers.md  types.md  variables.md
examples/: aoc1_2025.babel  fib.babel  hello.babel
src/: CMakeLists.txt  ast.h  ast_builder.h  colormod.h  config.c  config.h  config.h.in  externs.cpp  grammar.txt  handlers.h  lexer.h  lrParserTest2  lrparseTest1.txt  lrparser.h  parser.h  platform.h  shell.cpp  tools.h  typing.h  util.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: Downloader.cpp  Downloader.hpp  Exceptions.cpp  Exceptions.hpp  Logging.cpp  Logging.hpp  example.cpp  example.hpp
tests/: hello.babel  test_shell.cpp
